[package]
name = "neutrino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3.28"
libp2p = { path = "../rust-libp2p/libp2p", features = ["full"] }
multiaddr = { version = "0.17.1" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15.0"
secp256k1 = { version = "0.20.3", features = ["rand"] }
tokio = { version= "1", features = ["full"] }
web3 = "0.17.0"
serde_json = "1.0"
tiny-keccak = { version = "1.4" }

